c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_parse/invalid_suffix.c
int main(void) {
    /* There shouldn't be a space before the 'l' suffix in a long constant */
    return 0 l;
}